integration_tests/codegen_fail/fail/enum/derive_no_fields.stderr
warning: field is never read: `enum_path`
   --> $DIR/mod.rs:282:5
    |
282 |     pub enum_path: Option<TokenStream>,
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` on by default

warning: field is never read: `span`
   --> $DIR/mod.rs:296:5
    |
296 |     pub span: Span,
    |     ^^^^^^^^^^^^^^

warning: 2 warnings emitted

error: GraphQL enum expects at least one field
 --> $DIR/derive_no_fields.rs:2:1
  |
2 | pub enum Test {}
  | ^^^^^^^^^^^^^^^^
  |
  = note: https://spec.graphql.org/June2018/#sec-Enums
